syntax = "proto3";

package yandex.cloud.events.messagequeue;

import "yandex/cloud/events/common.proto";
import "yandex/cloud/validation.proto";

option go_package = "a.yandex-team.ru/cloud/bitbucket/public-api/yandex/cloud/events/messagequeue;messagequeue";
option java_package = "yandex.cloud.api.events.messagequeue";

message QueueMessage {
    EventMetadata event_metadata = 3 [(required) = true];
    EventDetails details = 7 [(required) = true];

    message EventDetails {
        string queue_id = 1 [(required) = true];
        Message message = 2;
    }
}

message MessageAttributeValue {
    string data_type = 1;
    oneof value {
        option (exactly_one) = true;
        bytes binary_value = 2;
        string string_value = 3;
    }
}

message Message {
    string message_id = 1 [(required) = true];
    string md5_of_body = 2;
    string body = 3;
    map<string, string> attributes = 4;
    map<string, MessageAttributeValue> message_attributes = 5;
    string md5_of_message_attributes = 6;
}

message QueueMessageBatch {
    repeated QueueMessage messages = 1;
}
